# anemometer

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
.devcontainer/: Dockerfile  _Dockerfile  devcontainer.json  docker-compose.yml  setup-python.sh
anemometer_api/: asgi.py  settings.py  urls.py  wsgi.py
anemometers/: admin.py  apps.py  models.py  serializers.py  throttling.py  urls.py  views.py
anemometers/migrations/: 0001_initial.py
core/migrations/: 0001_initial.py
